[package]
name = "binance_l3_est"
version = "0.3.0"
edition = "2024"
authors = ["OctopusTakopi"]
repository = "https://github.com/OctopusTakopi/binance_l3_est"
readme = "README.md"
license = "MIT"
keywords = ["order book", "binance", "trading", "hft", "visualization"]

[dependencies]
eframe = "0.32.0"
egui = { version = "0.32.0", features = ["default"] }
jiff = { version = "0.2", features = ["serde"] }
smallstr = { version = "0.3", features = ["serde", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.46", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
tungstenite = { version = "0.27", features = ["native-tls"] }
futures-util = "0.3.31"
egui_extras = { version = "*", features = ["all_loaders"] }

env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = "0.4"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
rust_decimal = { version = "1.37.2", features = ["macros"] }
egui_plot = "0.33.0"
rand = "0.9.1"
once_cell = "1.21.3"
rust_decimal_macros = "1.40.0"
rustfft = "6"
num-complex = "0.4"
thiserror = "2"
anyhow = "1"
